--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-  "name": "zero-to-prod/:slug",
-  "description": ":description",
+  "name": "zero-to-prod/arr",
+  "description": "Array helpers.",
   "license": "MIT",
   "type": "library",
   "keywords": [
     "zero-to-prod",
-    ":slug"
+    "arr"
   ],
   "readme": "./README.md",
-  "time": ":time",
+  "time": "2025-02-04",
   "authors": [
     {
       "name": "David Smith",
@@ -17,13 +17,13 @@
       "role": "maintainer"
     }
   ],
-  "homepage": "https://github.com/zero-to-prod/:slug",
+  "homepage": "https://github.com/zero-to-prod/arr",
   "support": {
     "email": "dave0016@gmail.com",
-    "issues": "https://github.com/zero-to-prod/:slug/issues",
-    "source": "https://github.com/zero-to-prod/:slug",
-    "docs": "https://zero-to-prod.github.io/:slug/",
-    "security": "https://github.com/zero-to-prod/:slug/blob/main/SECURITY.md"
+    "issues": "https://github.com/zero-to-prod/arr/issues",
+    "source": "https://github.com/zero-to-prod/arr",
+    "docs": "https://zero-to-prod.github.io/arr/",
+    "security": "https://github.com/zero-to-prod/arr/blob/main/SECURITY.md"
   },
   "funding": [
     {
@@ -32,7 +32,8 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "zero-to-prod/dock": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
@@ -40,7 +41,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Zerotoprod\\:namespace\\": "src/"
+      "Zerotoprod\\Arr\\": "src/"
     }
   },
   "autoload-dev": {
@@ -49,6 +50,6 @@
     }
   },
   "bin": [
-    "bin/:slug"
+    "bin/arr"
   ]
 }
