--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "zero-to-prod/dock": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
+    "phpunit/phpunit": "<12.0",
     "zero-to-prod/package-helper": "^1.0"
   },
   "autoload": {
