--- a/composer.json
+++ b/composer.json
@@ -32,12 +32,10 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "zero-to-prod/dock": "^1.0"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "*",
-    "zero-to-prod/package-helper": "^1.0"
+    "phpunit/phpunit": "<12.0"
   },
   "autoload": {
     "psr-4": {
@@ -48,8 +46,5 @@
     "psr-4": {
       "Tests\\": "tests/"
     }
-  },
-  "bin": [
-    "bin/arr"
-  ]
+  }
 }
