--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main ]
   workflow_run:
-    workflows: [ * ]
+    workflows: [ annotate ]
     types:
       - completed
 
