--- a/.github/workflows/annotate.yml
+++ b/.github/workflows/annotate.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}  # Changed from github.head_ref to github.ref for general use
+          ref: ${{ github.ref }}
 
       - name: Install jq
         run: sudo apt-get install -y jq
