--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "zero-to-prod/package-helper": "^1.1.3"
+    "php": ">=7.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "<12.0"
+    "phpunit/phpunit": "<12.0",
+    "zero-to-prod/package-helper": "^1.1.3"
   },
   "autoload": {
     "psr-4": {
@@ -47,5 +47,8 @@
     "psr-4": {
       "Tests\\": "tests/"
     }
-  }
+  },
+  "bin": [
+    "bin/zero-to-prod-arr"
+  ]
 }
