--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,11 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "zero-to-prod/package-helper": "^1.1.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "<12.0",
-    "zero-to-prod/package-helper": "^1.1.3"
+    "phpunit/phpunit": "<12.0"
   },
   "autoload": {
     "psr-4": {
